# chain-of-responsibility

./: CMakeLists.txt  README.md  chain-of-responsibility.cpp  chain-of-responsibility.h
UMLs/: chain_of_responsibility.mdj
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  basic_example.cpp
examples/email_processing/: CMakeLists.txt  email_processing_example.cpp
include/: Chain.h  Link.h
include/chain-of-resp/: Chain.h  Defs.h  Link.h
tests/: CMakeLists.txt  ChainTests.cpp  TestUtils.h
